@@ -30,10 +30,10 @@ public class Variables {
     public static final String[] showExtensions = new String[]{".mkv", ".avi", ".mp4", ".ts"};
     // Inner Version Numbers \\ // Set to 1000+ for Pre-Alpha / Alpha / Beta -- // Note- Set back to 1 for full release. \\
     public static final int ProgramSettingsFileVersion = 1012; // Was Changed // Note- Remove all "Was Changed" before merging with master.
-    public static final int UserSettingsFileVersion = 1003; // Was Changed
+    public static final int UserSettingsFileVersion = 1004; // Was Changed
     public static final int DirectoryFileVersion = 1000; // Was Changed
 
-    public static final int InternalVersion = 18; // To help keep track of what I'm currently working on / testing.
+    public static final int InternalVersion = 19; // To help keep track of what I'm currently working on / testing.
 
     /**/public static final boolean showOptionToToggleDevMode = true; // false
     /**/public static final boolean startFresh = false; // false -- Won't work unless devMode is true.
