@@ -62,6 +62,8 @@ Added ability to import files that have been exported.
 Added button to directory adder that opens a directory picking dialog.
 Added Stage for multiple checkboxes.
 Added option to import settings on firstRun. |||| It is very satisfying when something works the first time.
+Added current active username to the top of the main stage.
+Added per user setting to hide the username.
 
 Fixes:
 Will now properly switch to new seasons when found.
